@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-02T08:20:59Z",
-  "count_outdated" : 250,
-  "uniques_outdated" : 92,
-  "count" : 264,
+  "timestamp" : "2022-12-03T01:19:21Z",
+  "count_outdated" : 252,
+  "uniques_outdated" : 93,
+  "count" : 265,
   "uniques" : 102,
   "clones" : [
-    {
-      "timestamp": "2022-11-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-19T00:00:00Z",
       "count": 1,
