@@ -1,12 +1,7 @@
 {
-  "count": 14,
+  "count": 13,
   "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2022-11-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-11-19T00:00:00Z",
       "count": 1,
