@@ -1,3 +1,11 @@
+2022-12-03T01:19:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3606304640 # 283
+* notice: last 14d: unq all: 2 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 92 250 / 102 264
+* notice: next accum: outdated-unq outdated-all / unq all: 93 252 / 102 265
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-18] / []
+
 2022-12-02T08:20:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3600050072 # 281
 * notice: last 14d: unq all: 2 14
